test/Generics/inverse_protocols_errors.code
// RUN: %target-typecheck-verify-language



protocol RegularProto {}
protocol NCProto: RegularProto // expected-error{{'Self' required to be 'Copyable' but is marked with '~Copyable'}}
  where Self: ~Copyable {
  fn checkIfCopyableSelf(_ s: Self)
}

protocol Hello: ~Copyable {
  fn greet(_ s: Self)
  // expected-error@-1 {{parameter of noncopyable type 'Self' must specify ownership}}
  // expected-note@-2 {{add 'borrowing' for an immutable reference}}
  // expected-note@-3 {{add 'inout' for a mutable reference}}
  // expected-note@-4 {{add 'consuming' to take the value from the caller}}

  fn salute(_ s: borrowing Self)
}

struct RegularStruct: Hello {
    fn greet(_ s: Self) {}
    fn salute(_ s: Self) {}
}

struct NCThinger<T: ~Copyable>: ~Copyable, Hello {
  immutable fd: Int = 0
  deinit {}

  fn greet(_ f: Self) {}
  // expected-error@-1 {{parameter of noncopyable type 'NCThinger<T>' must specify ownership}}
  // expected-note@-2 {{add 'borrowing' for an immutable reference}}
  // expected-note@-3 {{add 'inout' for a mutable reference}}
  // expected-note@-4 {{add 'consuming' to take the value from the caller}}

  fn salute(_ s: borrowing Self) {}

  fn setThinger(_ t: T) {}
  // expected-error@-1 {{parameter of noncopyable type 'T' must specify ownership}}
  // expected-note@-2 {{add 'borrowing' for an immutable reference}}
  // expected-note@-3 {{add 'inout' for a mutable reference}}
  // expected-note@-4 {{add 'consuming' to take the value from the caller}}
}
